# Plant-Leaf-Recognition

./: .dockerignore  .gitattributes  .gitignore  DEPLOY.md  Dockerfile.api  LICENSE  README.md  TEST_MARKER.txt  app.py  class_labels.json  gradio_app.py  ood.npz  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-push-image.yml  ci.yml  daily-gather.yml  dependabot-auto-merge.yml  deploy-pages.yml  keep-alive.yml  weekly-retrain.yml
.streamlit/: config.toml
api/: main.py
artifacts/: class_labels.json  ood.npz
artifacts/model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
artifacts/reports/: history.json  metrics.md
data/leaf12/: ATTRIBUTION.md
data/leaf13/: ATTRIBUTION.md
data/leaf14/: ATTRIBUTION.md
data/leaf2/: ATTRIBUTION.md
data/leaf3/: ATTRIBUTION.md
data/leaf4/: ATTRIBUTION.md
data/leaf5/: ATTRIBUTION.md
data_pending/: README.md
docs/: ARCHITECTURE.md  FINDINGS.md  INTEGRATION.md  PROJECT_STRUCTURE.md  RUNBOOK.md  SECURITY.md
leaf_cnn/: fingerprint.pb  saved_model.pb
reports/: history.json  metrics.md
scripts/: compress_dataset.py  evaluate_model.py  fetch_full_dataset.py  fetch_species_dataset.py  new_species_candidates.txt  promote_pending.py  regression_gate.py  run_app.py  train_model.py
tests/: test_api_security.py  test_data_helpers.py  test_fetch_species_dataset.py  test_http_utils.py  test_pending_helpers.py  test_promote_pending.py
web/: 404.html  README.md  blog.html  identify.html  index.html  journal.html  robots.txt  sitemap.xml  style.css
(+32 files in other folders)
